Fixed Offcanvas covering the Navbar

--- a/backend/frontend/src/styles/App.css
+++ b/backend/frontend/src/styles/App.css
@@ -29,3 +29,7 @@ button {
   border: none;
   outline: none;
 }
+
+.offcanvas{
+  margin-top: 56px;
+}
